Docker based ocserv

--- a/etc/ocserv.conf
+++ b/etc/ocserv.conf
@@ -39,7 +39,6 @@
 #auth = "pam"
 #auth = "pam[gid-min=1000]"
 #auth = "plain[passwd=./sample.passwd,otp=./sample.otp]"
-# ---------- 设置加载密码文件 -----------
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 #auth = "certificate"
 #auth = "radius[config=/etc/radiusclient/radiusclient.conf,groupconfig=true]"
@@ -110,8 +109,8 @@ socket-file = /var/run/ocserv-socket
 # There may be multiple server-cert and server-key directives,
 # but each key should correspond to the preceding certificate.
 # -------- Dockerfile 中生成的 cert -------
-server-cert = /opt/certs/server-cert.pem
-server-key = /opt/certs/server-key.pem
+server-cert = /etc/ocserv/certs/server.crt
+server-key =  /etc/ocserv/certs/server.key
 
 # Diffie-Hellman parameters. Only needed if you require support
 # for the DHE ciphersuites (by default this server supports ECDHE).
@@ -137,10 +136,7 @@ server-key = /opt/certs/server-key.pem
 # The Certificate Authority that will be used to verify
 # client certificates (public keys) if certificate authentication
 # is set.
-# -------------- 需要证书登陆的需要 -------------
-ca-cert = ../tests/ca.pem
-#ca-cert = /etc/ssl/certs/ca.pem
-
+ca-cert = /etc/ocserv/certs/ca.crt
 
 ### All configuration options below this line are reloaded on a SIGHUP.
 ### The options above, will remain unchanged.
@@ -160,7 +156,7 @@ max-clients = 0
 
 # Limit the number of identical clients (i.e., users connecting 
 # multiple times). Unset or set to zero for unlimited.
-max-same-clients = 0
+max-same-clients = 2
 
 # When the server has a dynamic DNS address (that may change),
 # should set that to true to ask the client to resolve again on
@@ -399,7 +395,7 @@ predictable-ips = true
 # Note that, you could use addresses from a subnet of your LAN network if you
 # enable proxy arp in the LAN interface (see http://infradead.org/ocserv/recipes-ocserv-pseudo-bridge.html);
 # in that case it is recommended to set ping-leases to true.
-ipv4-network = 192.168.1.0
+ipv4-network = 10.239.10.0
 ipv4-netmask = 255.255.255.0
 
 # An alternative way of specifying the network:
@@ -458,7 +454,7 @@ ping-leases = false
 # the server.
 
 # ------ 如果有内网, 则需要放弃一条 no-route 使用 192.168... 来代替, 排除内网访问 ------
-#no-route = 192.168.0.0/255.255.0.0
+no-route = 192.168.0.0/255.255.0.0
 no-route = 1.0.0.0/255.192.0.0
 no-route = 1.64.0.0/255.224.0.0
 no-route = 1.112.0.0/255.248.0.0
