--- a/etc/certs/ca.template
+++ b/etc/certs/ca.template
@@ -1,5 +1,5 @@
-cn = "Your desired authority name"
-organization = "Your desired orgnization name"
+cn = "Zero Space CA"
+organization = "Zero Space"
 serial = 1
 expiration_days = 3650
 ca
